--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         </div>
 
 
-        <div class="parallax__layer parallax__layer--deep" >          
+        <div class="parallax__layer parallax__layer--back" >          
         </div>
 
 
