update banner + bio

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <!-- First group -->  
       <div class="topHeader text-center">
               <h3 class="crimsonFont">joel rodriguez medina</h3>
-              <p class="crimsonFont"> jrodriguezm {at} ucdavis {dot} edu </p>
+              <p class="crimsonFont"> joelrome88 {at} gmail {dot} com </p>
       </div>  
 
     
@@ -40,7 +40,7 @@
     <div id="group3" class="parallax__bg">     
 
         <div class="parallax__layer parallax__layer--back"
-        style="background-image:url(img/bgnd.jpg); /*image made by http://instagram.com/dafca_dreams*/
+        style="background-image:url(img/bgnd.jpg); /*illustration by http://instagram.com/dafca_dreams*/
                background-repeat:no-repeat;
                background-size: cover;
                overflow:hidden;
@@ -54,11 +54,17 @@
             <div class="col-md-8 text-black">
                 <div class="containerCards" style="background-color: white; opacity:0.8"> 
                   <p class="text-justify">
-                  I'm a PhD candidate in Genetics and Genomics at UC Davis working in 
-                  <a rel="nofollow" href="https://bradylab.org" target="_blank">Siobhan Brady's lab</a>.  
-                  <br>
-                  <br>
-                  I use computers and data &#128187 &#128202 to understand how plants &#127793 regulate their genomes &#129516 in response to their environment and what makes different cell-types in roots of tomato &#127813  have distinct identities and functions.
+                  
+                    Hi! <br> I'm Joel and I love using computers, logic, and data 💻 📊 to solve problems. <br>
+                    <br>
+                    During my PhD, my research focused in understanding how plants 🌱 regulate their genomes 🧬 in 
+                    response to their environment.<br>
+                    <br>
+                    As an Insight Health Data Science fellow, I created <em>SuppSmart</em>:
+                    a recommendation system to suggest dietary supplements based on an user’s search query.
+                    <a rel="nofollow" href="http://13.57.203.167:8501" target="_blank" style="color: darkblue;text-align: center;"> <em>Try it out here!</em></a> <br>
+                    <br>
+                    Now I'm working at Foodome, where I'm developing tools to understand the relationship between plants as food and our health.
                   </p>
                 </div>
             </div>
