--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
         <div class="containerCards" style="background-color: white; opacity:1"> 
               <h4>about me</h4>
               <p class="text-black" style="color:black;"> 
-                I use programming and data science to answer questions about biology. I also like to write, draw, and taching principles of data literacy by coding.  
+                I use programming and data science to answer questions about biology. I also like to write, draw, and teaching principles of data literacy by coding.  
 
                 I helped to teach and develop material to teach an undergrad course at UC Davis called Genome Hunters. We taught undergrads principles of bioinformatics in a project-based course. Students isolated salt-tolerant microbes and send their genomes for sequencing. In the class students learned data-driven approaches to test hypothesis. This resulted in a <a href="https://mra.asm.org/content/9/8/e01540-19?_ga=2.13554292.2118313304.1582829127-317335440.1582829127"> publication </a> that was featured as a the <a href="https://asm.org/Articles/2020/February/Microbiology-Resource-of-the-Month-Student-Discove"> <em>Microbiology Resource of the Month</em> </a>.
                 <br>
